# scoutos-python

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml  publish-prerelease.yml  publish.yml  run-examples.yml
cookbook/csv_to_collection/: curations.csv  main.ipynb
cookbook/csv_to_collection/csv_to_collection/: README.md  pyproject.toml
examples/: readme.md
examples/load_from_json/: Makefile  README.md  app.json  main.py  pyproject.toml
examples/load_from_yaml/: Makefile  README.md  app.yaml  main.py  pyproject.toml
examples/usage_from_python_script/: .env.example  Makefile  README.md  main.py  pyproject.toml
scoutos/: __init__.py  app.py  condition.py  constants.py  env.py  hello_world.py  secret.py
scoutos/blocks/: __init__.py  base.py  function.py  http.py  identity.py  input.py  output.py  template.py
scoutos/blocks/generative/: __init__.py  base.py  open_ai.py  types.py
scoutos/blocks/slack/: __init__.py  base.py  get_channels.py  get_messages.py  get_thread.py  get_user_info.py  types.py
scoutos/cli/: main.py
scoutos/cli/utils/: __init__.py  parse_json.py
scoutos/dependencies/: __init__.py  any.py  base.py  bool.py  float.py  int.py  main.py  str.py
scoutos/utils/: __init__.py  default_value.py  get_current_timestamp.py  get_nested_value_from_dict.py  read_data_from_file.py
scripts/: run_examples.sh
tests/: conftest.py  test_app.py  test_condition.py  test_env.py  test_hello_world.py  test_secret.py
tests/blocks/: test_block.py  test_function.py  test_http.py  test_identity.py
tests/blocks/generative/: test_open_ai.py
tests/blocks/generative/fixtures/: open_ai_completion_response.pkl
tests/blocks/slack/: test_get_channels.py  test_get_messages.py  test_get_thread.py  test_get_user_info.py  test_slack_base.py
tests/blocks/slack/fixtures/: get_channels_payload.json  get_messages_payload.json  get_thread_payload.json
tests/dependencies/: test_any.py  test_base.py  test_bool.py  test_float.py  test_int.py  test_str.py
tests/utils/: test_get_current_timestamp.py  test_get_nested_value_from_dict.py  test_load_data_from_file.py
