[tool.poetry]
name = "scoutos"
version = "0.1.0"
description = "ScoutOS Python SDK"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/otherwillhq/scoutos-python"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.16.1"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
freezegun = "^1.4.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",
  "ANN204",
  "COM812",
  "D",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
  "ANN001",
  "ANN201",
  "ANN401",
  "D",
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

